--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,10 +42,13 @@
   --highlight: oklch(0.852 0.199 91.936);
 }
 
+html {
+  min-width: 320px;
+  min-height: 100%;
+}
+
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
